[package]
name = "vault-gui"
version = "0.0.0"
description = "A Tauri App for using Hashicorps Vault"
authors = ["c0rydoras", "Gian Klug <gian.klug@adfinis.com>"]
license = "MIT"
repository = "https://github.com/c0rydoras/vault-gui"
default-run = "vault-gui"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["api-all"] }
vaultrs = "0.7.2"
lazy_static = "1.4.0"
mutex = "0.1.0"
vaultrs-login = { version = "0.2.1", features = ["oidc"] }
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size
